# colonize

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  appveyor.yml  build.rs  clippy.toml  colonize.json.example  index.html
.github/workflows/: superlinter.yml
assets/localization/: en_CA.json
assets/shaders/: default.frag  default.vert  forward.frag  forward.vert  forward_wasm.frag  forward_wasm.vert  hot.frag  hot.vert  hot_hat.frag  hot_hat.vert
assets/textures/game_scene/: block.ai
backend/: Cargo.toml  LICENSE
backend/src/: lib.rs  rendering.rs  tcod.rs  windowing.rs
ci/: before_deploy.sh  install.sh  script.sh  utils.sh
crates/common/: Cargo.toml
crates/common/src/: lib.rs  terrain.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  terrain.rs  util.rs
crates/noise/: Cargo.toml
crates/noise/src/: lib.rs
crates/pbr/: Cargo.toml
crates/pbr/src/: entity.rs  lib.rs  light.rs  material.rs  y_level.rs
crates/pbr/src/render_graph/: forward_pipeline.rs  lights_node.rs  mod.rs  y_level_node.rs
crates/pbr/src/render_graph/forward_pipeline/: forward.frag  mod.rs
framework/: Cargo.toml  build.rs
framework/examples/: sprite.rs
framework/src/: bindings.in.rs  bindings.rs  color.rs  draw.rs  id.rs  lib.rs  macros.rs  manager.rs  rectangle.rs  scene.rs  scene_manager.rs  texture.rs  transform.rs
framework/src/backend/: graphics.rs  mod.rs
framework/src/rendering/: batch.rs  mesh.rs  mod.rs  renderer.rs  shader.rs  text.rs
framework/src/rendering/sprite/: mod.rs  sprite.frag  sprite.vert
framework/src/util/: mod.rs  rustc_serialize_wrapper.rs
publish/: index.html
src/: action.in.rs  action.rs  app.rs  backend.rs  bindings.rs  block.rs  camera.in.rs  camera.rs  chunk.rs  client.rs  colonize.rs  command.rs  config.in.rs  config.rs  drawable.rs  dwarf.rs  game.rs  gamescene.rs  gamestate.rs  greeting.rs  grid.rs  localization.in.rs  localization.rs  main.rs  map.rs  menuscene.rs  noise.rs  scene.rs  shader.rs  terrain.rs  textures.rs  tile.rs  world.rs  worldview.rs
src/scene/: context.rs  game_scene.rs  menu_scene.rs  mod.rs
src/terrain/: mod.rs  tile.rs
src/world/: chunk.rs  mod.rs  world.rs
utility/: Cargo.toml
utility/src/: lib.rs
world/: Cargo.toml  build.rs
world/src/: area.rs  chunk.rs  direction.in.rs  direction.rs  lib.rs  mapgen.rs  terrain.rs  world.rs
www/: package.json  style.css  tailwind.config.js
