[package]
name = "colonize"
version = "0.5.0"
authors = ["Nikita Pekin <nikita@frecency.com>"]
description = "A Dwarf Fortress/Rimworld-like game written in Rust"
repository = "https://github.com/indiv0/colonize"
readme = "README.md"
keywords = [
    "colonize",
    "game",
    "dwarf",
    "fortress",
    "rimworld",
    "bevy"
]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "2e2423139e0cd8efda3aa0d474d3eb231dad566b", default-features = false }
bevy_mod_picking = { git = "https://github.com/indiv0/bevy_mod_picking" }
bevy_rapier3d = { git = "https://github.com/indiv0/bevy_rapier", default-features = false, features = ["dim3"]}
bevy_webgl2 = { git = "https://github.com/indiv0/bevy_webgl2", optional = true }
building-blocks = { git = "https://github.com/bonsairobo/building-blocks", rev = "37fa5fd4e2fcbc57795eb6fa4d681dd315277447", default-features = false, features = ["mesh", "snappy"] }
noise = { version = "0.6.0", default-features = false }
rand = "0.7.3"

[features]
default = [
    "bevy/bevy_audio",
    "bevy/bevy_dynamic_plugin",
    "bevy/bevy_gilrs",
    "bevy/bevy_gltf",
    "bevy/bevy_wgpu",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/hdr",
    "bevy/mp3",
    "bevy/x11"
]
wasm = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_webgl2"
]

[profile.dev]
opt-level = 3

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
#lto = true
