[package]
name = "colonize"
version = "0.6.0"
authors = ["Nikita Pekin <nikita@frecency.com>"]
description = "A Dwarf Fortress/Rimworld-like game written in Rust"
repository = "https://github.com/indiv0/colonize"
readme = "README.md"
keywords = [
    "colonize",
    "game",
    "dwarf",
    "fortress",
    "rimworld",
    "bevy"
]
license = "GPL-3.0-or-later"
edition = "2018"

[workspace]
members = ["crates/*"]

[dependencies]
bevy = { version = "0.4.0", default-features = false, features = ["bevy_gltf", "bevy_winit", "png", "render"] }
bevy_mod_picking = { version = "0.3.1", default-features = false }
bevy_rapier3d = { version = "0.7.0", default-features = false, features = ["dim3"] }
bevy_webgl2 = { version = "0.4.0", optional = true }
building-blocks = { git = "https://github.com/bonsairobo/building-blocks", rev = "b57fc864fdac5a40fe138c7bb8fbcd0614667cb5", default-features = false, features = ["mesh", "snappy"] }
colonize_common = { path = "crates/common" }
colonize_core = { path = "crates/core" }
colonize_noise = { path = "crates/noise" }
noise = { version = "0.6.0", default-features = false }
rand = "0.7.3"

[features]
default = [
    "bevy/bevy_audio",
    "bevy/bevy_dynamic_plugin",
    "bevy/bevy_gilrs",
    "bevy/bevy_wgpu",
    "bevy/hdr",
    "bevy/mp3",
    "bevy/x11"
]
wasm = [
    "bevy_webgl2"
]

[profile.dev]
opt-level = 3

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
#lto = true