[package]

name = "colonize-backend"
version = "0.0.1"
authors = [
    "Nicholas Mazzuca <npmazzuca@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]

description = "Includes all the backend-dependent parts of colonize"

[dependencies]
tcod = "0.5.0"

[dependencies.colonize-utility]
path = "../utility"
