[package]

name = "colonize_backend"
version = "0.0.1"
authors = [
    "Nicholas Mazzuca <npmazzuca@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]

description = "Includes all the backend-dependent parts of colonize"

[dependencies]
tcod = "0.9.0"

[dependencies.clippy]
optional = true
version = "0.0.63"

[dependencies.colonize_utility]
path = "../utility"

[features]
nightly-testing = ["clippy"]
