[package]

name = "rgframework"
version = "0.0.1"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
build = "build.rs"

description = "A Rust game framework built upon Piston"

[build-dependencies.serde_codegen]
optional = true
version = "*"

[build-dependencies.syntex]
optional = true
version = "*"

[dependencies]
piston = "0.22.1"
piston2d-graphics = "0.16.0"
rustc-serialize = "0.3"
serde = "0.7.4"

[dependencies.clippy]
optional = true
version = "0.0.66"

[dependencies.serde_macros]
optional = true
version = "0.7.4"

[features]
default = ["with-syntex"]
nightly = [
    "serde_macros",
]
nightly-testing = [
    "clippy",
    "nightly",
]
with-syntex = [
    "serde_codegen",
    "syntex"
]

