[package]

name = "rgframework"
version = "0.0.1"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "A game development framework built around Piston"
repository = "https://github.com/indiv0/colonize"
keywords = [
    "game",
    "development",
    "framework",
    "piston",
    "opengl",
    "glium",
    "glutin",
]
license = "MIT/Apache-2.0"
build = "build.rs"

[build-dependencies.serde_codegen]
optional = true
version = "0.8.9"

[build-dependencies.syntex]
optional = true
version = "0.54.0"

[dependencies]
piston = "0.27.0"
piston2d-graphics = "0.19.0"
rustc-serialize = "0.3.22"
serde = "0.8.21"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.serde_macros]
optional = true
version = "0.8.9"

[features]
default = ["with-syntex"]
nightly = [
    "serde_macros",
]
nightly-testing = [
    "clippy",
    "nightly",
]
with-syntex = [
    "serde_codegen",
    "syntex"
]

