[package]

name = "colonize_utility"
version = "0.0.1"
authors = [
    "Nicholas Mazzuca <npmazzuca@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]

description = "Utilities for general roguelike creation"

[dependencies]
cgmath = "*"

[dependencies.clippy]
optional = true
version = "0.0.63"

[features]
nightly-testing = ["clippy"]
