[package]

name = "colonize_utility"
version = "0.0.1"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
license = "MIT/Apache-2.0"

description = "Utilities for general roguelike creation"

[dependencies]
cgmath = "0.9.1"

[dependencies.clippy]
optional = true
version = "0.0"

[features]
nightly-testing = ["clippy"]
