[package]

name = "colonize_utility"
version = "0.0.1"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "A utility library built for the game Colonize"
repository = "https://github.com/indiv0/colonize"
keywords = [
    "game",
    "colonize",
    "utility",
    "library",
]
license = "MIT/Apache-2.0"

[dependencies]
cgmath = "0.9.1"

[dependencies.clippy]
optional = true
version = "0.0"

[features]
nightly-testing = ["clippy"]
