[package]

name = "colonize_world"
version = "0.0.1"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
description = "A library for representing the internal game state for Colonize"
repository = "https://github.com/indiv0/colonize"
keywords = [
    "game",
    "state",
    "library",
    "colonize",
]
license = "MIT/Apache-2.0"
build = "build.rs"

[build-dependencies.serde_codegen]
optional = true
version = "0.7.5"

[build-dependencies.syntex]
optional = true
version = "0.32.0"

[dependencies]
cgmath = "0.9.1"
array = "0.0.1"
noise = "0.2.0"
num = "0.1.32"
rand = "0.3.14"
serde = "0.7.4"

[dependencies.colonize_utility]
path = "../utility"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.serde_macros]
optional = true
version = "0.7.5"

[features]
default = ["with-syntex"]
nightly = [
    "serde_macros",
]
nightly-testing = [
    "clippy",
    "nightly",
]
with-syntex = [
    "serde_codegen",
    "syntex"
]
