[package]
name = "colonize_common"
version = "0.1.0"
edition = "2018"
authors = ["Nikita Pekin <nikita@frecency.com>"]
publish = false

[dependencies]
building-blocks = { git = "https://github.com/bonsairobo/building-blocks", rev = "b57fc864fdac5a40fe138c7bb8fbcd0614667cb5", default-features = false, features = ["mesh", "snappy"] }