[package]
name = "colonize_core"
version = "0.1.0"
edition = "2018"
authors = ["Nikita Pekin <nikita@frecency.com>"]
publish = false

[dependencies]
bevy = { version = "0.4.0", default-features = false, features = ["bevy_gltf", "bevy_winit", "png", "render"] }
building-blocks = { version = "0.4.3", default-features = false, features = ["mesh", "snappy"] }
colonize_common = { path = "../common" }