[package]
name = "colonize_core"
version = "0.1.0"
edition = "2018"
authors = ["Nikita Pekin <nikita@frecency.com>"]
publish = false

[dependencies]
bevy = { version = "0.4.0", default-features = false, features = ["bevy_gltf", "bevy_winit", "png", "render"] }
building-blocks = { git = "https://github.com/bonsairobo/building-blocks", rev = "bf95c77450a1a118502b3c12c1d712fc215c0f86", default-features = false, features = ["mesh", "snappy"] }
colonize_common = { path = "../common" }