[package]
name = "colonize_core"
version = "0.1.0"
edition = "2018"
authors = ["Nikita Pekin <nikita@frecency.com>"]
publish = false

[dependencies]
bevy = { version = "0.4.0", default-features = false, features = ["bevy_gltf", "bevy_winit", "png", "render"] }
building-blocks = { git = "https://github.com/bonsairobo/building-blocks", rev = "339cd43028b0501cbeda714d24d115afcb121540", default-features = false, features = ["mesh", "snappy"] }
colonize_common = { path = "../common" }